--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <title>Des-Encriptador</title>
 </head>
 <body>
     <header>
-        <h1>Des-encriptador</h1>
+        <img src="img/Candado.png" alt="Logo de un candado" id="candado">
+        <h1 id="titulo">Des-Encriptador</h1>
     </header>
     <main>
-        <textarea name="Texto-usuario" id="" cols="30" rows="10"></textarea>        
-        <textarea name="texto-generado" id="" cols="30" rows="10"></textarea>
-        <button id="boton-encriptar">Encriptar</button>
-        <button id="boton-desencriptar">Desencriptar</button>
-
+        <h2 id="texto-bienvenida">Bienvenidos a la mejor opción para encriptar y desencriptar texto</h2>
+        <section id="contenedor-encriptar">
+            <p class="texto-descripcion">Inserte aquí el texto que desea encriptar</p>
+            <textarea name="Texto-usuario" id="" cols="30" rows="10" itemid="area-encriptar"></textarea>
+            <button id="boton-encriptar">Encriptar</button>        
+        </section>
+        <section id="contenedor-desencriptar">
+            <p class="texto-descripcion">Inserte aquí el texto que desea desencriptar</p>
+            <textarea name="texto-generado" id="" cols="30" rows="10" itemid="area-desencriptar"></textarea>
+            <button id="boton-desencriptar">Desencriptar</button>
+        </section>
     </main>
     <footer>
-        <p>Autor: José Ibañez 2024</p>
+        <p id="autor">Autor: José Ibañez</p>
+        <img src="img/Hand.png" alt="logo del autor" id="logo">
     </footer>
 </body>
 </html>
