Agrega botones para copiar el texto al portapapeles

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <section id="contenedor-encriptar">
             <p class="texto-descripcion">Inserte aquí el texto que desea encriptar</p>
             <textarea name="texto-usuario" id="area-encriptar" cols="30" rows="10"></textarea>
+            <button id="copiar-desencriptado"></button>
             <button id="boton-encriptar" onclick="guardarTexto('area-encriptar')">Encriptar</button>        
         </section>
         <section id="contenedor-desencriptar">
             <p class="texto-descripcion">Inserte aquí el texto que desea desencriptar</p>
             <textarea name="texto-generado" id="area-desencriptar" cols="30" rows="10"></textarea>
+            <button id="copiar-encriptado"></button>
             <button id="boton-desencriptar" onclick="guardarTexto('area-desencriptar')">Desencriptar</button>
         </section>
     </main>
