Cambia los enlaces de las imágenes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/Candado.png">
+    <link rel="icon" href="https://i.ibb.co/9ZbHY4Y/Candado.png">
     <title>Des-Encriptador</title>
 </head>
 <body>
     <header>
-        <img src="img/Candado.png" alt="Logo de un candado" id="candado">
+        <img src="https://i.ibb.co/9ZbHY4Y/Candado.png" alt="Logo de un candado" id="candado">
         <h1 id="titulo">Des-Encriptador</h1>
     </header>
     <main>
@@ -34,7 +34,7 @@
     </main>
     <footer>
         <p id="autor">Autor: José Ibañez</p>
-        <img src="img/Hand.png" alt="logo del autor" id="logo">
+        <img src="https://i.ibb.co/NFSFCNd/Hand.png" alt="logo del autor" id="logo">
     </footer>
     <script src="script.js"></script>
 </body>
